used objects, added audio files

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,11 +28,12 @@ body{
 	padding: 10px 20px;
 	color: #abbce9;
 	text-align: center;
+	margin-top: 100px;
 
 }
 
 .border{
-	border: 2px solid #abbce9;
+	/*border: 2px solid #abbce9;*/
 }
 
 .bg{
@@ -41,6 +42,7 @@ body{
 }
 
 .img-style{
+
 	
 }
 
